src/snapshots/alma__parser__tests__test_expression__lambda_syntax_sugar.snap
---
source: src/parser.rs
assertion_line: 2181
expression: "parse(\"\\\nlet\n  incr n = n + 1\nin\nincr 5\n\")"

---
Input:

let
  incr n = n + 1
in
incr 5


Result:

Node {
    start: 0,
    end: 30,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Let(
            [
                Untyped(
                    Lambda(
                        Node {
                            start: 6,
                            end: 10,
                            line: 2,
                            column: 2,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 1,
                                },
                            },
                        },
                        Lambda {
                            parameters: [
                                Node {
                                    start: 11,
                                    end: 12,
                                    line: 2,
                                    column: 7,
                                    value: Identifier(
                                        Node {
                                            start: 11,
                                            end: 12,
                                            line: 2,
                                            column: 7,
                                            value: Identifier_ {
                                                name: SymbolU32 {
                                                    value: 2,
                                                },
                                            },
                                        },
                                    ),
                                },
                            ],
                            body: Node {
                                start: 15,
                                end: 20,
                                line: 2,
                                column: 11,
                                value: Expression_ {
                                    typ: RefCell {
                                        value: None,
                                    },
                                    expr: Binary(
                                        Node {
                                            start: 17,
                                            end: 18,
                                            line: 2,
                                            column: 13,
                                            value: Expression_ {
                                                typ: RefCell {
                                                    value: None,
                                                },
                                                expr: Identifier(
                                                    None,
                                                    Identifier(
                                                        Node {
                                                            start: 17,
                                                            end: 18,
                                                            line: 2,
                                                            column: 13,
                                                            value: Identifier_ {
                                                                name: SymbolU32 {
                                                                    value: 3,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        },
                                        Node {
                                            start: 17,
                                            end: 18,
                                            line: 2,
                                            column: 13,
                                            value: Binop_ {
                                                typ: Addition,
                                                precedence: 14,
                                                associativity: Ltr,
                                                fn_: Identifier_ {
                                                    name: SymbolU32 {
                                                        value: 3,
                                                    },
                                                },
                                            },
                                        },
                                        [
                                            Node {
                                                start: 15,
                                                end: 16,
                                                line: 2,
                                                column: 11,
                                                value: Expression_ {
                                                    typ: RefCell {
                                                        value: None,
                                                    },
                                                    expr: Identifier(
                                                        None,
                                                        Identifier(
                                                            Node {
                                                                start: 15,
                                                                end: 16,
                                                                line: 2,
                                                                column: 11,
                                                                value: Identifier_ {
                                                                    name: SymbolU32 {
                                                                        value: 2,
                                                                    },
                                                                },
                                                            },
                                                        ),
                                                    ),
                                                },
                                            },
                                            Node {
                                                start: 19,
                                                end: 20,
                                                line: 2,
                                                column: 15,
                                                value: Expression_ {
                                                    typ: RefCell {
                                                        value: None,
                                                    },
                                                    expr: Float(
                                                        1.0,
                                                    ),
                                                },
                                            },
                                        ],
                                    ),
                                },
                            },
                        },
                    ),
                ),
            ],
            Node {
                start: 24,
                end: 30,
                line: 4,
                column: 0,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: FnCall(
                        Node {
                            start: 24,
                            end: 28,
                            line: 4,
                            column: 0,
                            value: Expression_ {
                                typ: RefCell {
                                    value: None,
                                },
                                expr: Identifier(
                                    None,
                                    Identifier(
                                        Node {
                                            start: 24,
                                            end: 28,
                                            line: 4,
                                            column: 0,
                                            value: Identifier_ {
                                                name: SymbolU32 {
                                                    value: 1,
                                                },
                                            },
                                        },
                                    ),
                                ),
                            },
                        },
                        [
                            Node {
                                start: 29,
                                end: 30,
                                line: 4,
                                column: 5,
                                value: Expression_ {
                                    typ: RefCell {
                                        value: None,
                                    },
                                    expr: Float(
                                        5.0,
                                    ),
                                },
                            },
                        ],
                    ),
                },
            },
        ),
    },
}
