src/snapshots/alma__parser__tests__test_expression__let in multiline 2.snap
---
source: src/parser.rs
assertion_line: 2873
expression: "parse(\"\\\nlet\n  x = a\n    x\nin\nx\")"
---
Input:

let
  x = a
    x
in
x

Result:

Let 0:22
    definitions:
        Untyped
            pattern:
                Identifier x 6:7 6:7
            expr:
                FnCall 10:17
                    fn:
                        Identifier a 10:11 10:11
                    args:
                        Identifier x 16:17 16:17
    Identifier x 21:22 21:22
