src/snapshots/alma__parser__tests__test_expression__let in multiline bad indent in binding value.snap
---
source: src/parser.rs
assertion_line: 2289
expression: "parse(\"\\\nlet\n  x = a\n  x\nin\nx\")"
---
Input:

let
  x = a
  x
in
x

Result:

:4:0

Expected an `=` sign or list of parameters for the definition of `x`, but instead found: `in`

  2│    x = a
  3│    x
  4│  in
   │  ↑↑
  5│  x

Error {
    kind: InvalidLetBindingParametersOrEqualSeparator(
        Identifier_ {
            name: SymbolU32 {
                value: 1,
            },
        },
    ),
    token: Token {
        kind: In,
        indent: 0,
        start: 16,
        end: 18,
        line: 4,
        column: 0,
    },
}
