src/snapshots/alma__parser__tests__test_expression__let in multiline.snap
---
source: src/parser.rs
assertion_line: 2279
expression: "parse(\"\\\nlet x = a\n  x\nin\nx\")"
---
Input:

let x = a
  x
in
x

Result:

Node {
    start: Idx(
        0,
    ),
    end: Idx(
        6,
    ),
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Let(
            [
                Untyped(
                    Pattern(
                        Node {
                            start: Idx(
                                1,
                            ),
                            end: Idx(
                                1,
                            ),
                            value: Identifier(
                                Node {
                                    start: Idx(
                                        1,
                                    ),
                                    end: Idx(
                                        1,
                                    ),
                                    value: Identifier_ {
                                        name: SymbolU32 {
                                            value: 1,
                                        },
                                    },
                                },
                            ),
                        },
                        Node {
                            start: Idx(
                                3,
                            ),
                            end: Idx(
                                4,
                            ),
                            value: Expression_ {
                                typ: RefCell {
                                    value: None,
                                },
                                expr: FnCall(
                                    Node {
                                        start: Idx(
                                            3,
                                        ),
                                        end: Idx(
                                            3,
                                        ),
                                        value: Expression_ {
                                            typ: RefCell {
                                                value: None,
                                            },
                                            expr: Identifier(
                                                None,
                                                Identifier(
                                                    Node {
                                                        start: Idx(
                                                            3,
                                                        ),
                                                        end: Idx(
                                                            3,
                                                        ),
                                                        value: Identifier_ {
                                                            name: SymbolU32 {
                                                                value: 2,
                                                            },
                                                        },
                                                    },
                                                ),
                                            ),
                                        },
                                    },
                                    [
                                        Node {
                                            start: Idx(
                                                4,
                                            ),
                                            end: Idx(
                                                4,
                                            ),
                                            value: Expression_ {
                                                typ: RefCell {
                                                    value: None,
                                                },
                                                expr: Identifier(
                                                    None,
                                                    Identifier(
                                                        Node {
                                                            start: Idx(
                                                                4,
                                                            ),
                                                            end: Idx(
                                                                4,
                                                            ),
                                                            value: Identifier_ {
                                                                name: SymbolU32 {
                                                                    value: 1,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                ),
                                            },
                                        },
                                    ],
                                ),
                            },
                        },
                    ),
                ),
            ],
            Node {
                start: Idx(
                    6,
                ),
                end: Idx(
                    6,
                ),
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        None,
                        Identifier(
                            Node {
                                start: Idx(
                                    6,
                                ),
                                end: Idx(
                                    6,
                                ),
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                },
                            },
                        ),
                    ),
                },
            },
        ),
    },
}
