src/snapshots/alma__parser__tests__test_expression__let_pascalcase_identifier.snap
---
source: src/parser.rs
assertion_line: 2900
expression: "parse(\"\\\nlet\n  IAmNotCamelCase = 1\nin\nIAmNotCamelCase\n\")"
---
Input:

let
  IAmNotCamelCase = 1
in
IAmNotCamelCase


Result:

Let 0:44
    definitions:
        Untyped
            pattern:
                IAmNotCamelCase 6:21 6:21
            expr:
                Float 1 24:25
    Identifier IAmNotCamelCase 29:44 29:44
