src/snapshots/alma__parser__tests__test_expression__parenthesis-3.snap
---
source: src/parser.rs
assertion_line: 2185
expression: "parse(\"(((1))\")"
---
Input:

(((1))

Result:

:1:6

Expected `)` after parenthesized expression, but instead found: `[End of file]`

  1│  (((1))
   │        ↑

Error {
    kind: InvalidParenthesizedExpressionLastDelimiter(
        Token {
            kind: LeftParen,
            indent: 0,
            start: 0,
            end: 1,
            line: 1,
            column: 0,
        },
    ),
    token: Token {
        kind: Eof,
        indent: 0,
        start: 6,
        end: 6,
        line: 1,
        column: 6,
    },
}
