src/snapshots/alma__parser__tests__test_expression__parenthesis-4.snap
---
source: src/parser.rs
assertion_line: 2185
expression: "parse(\"(((1))))\")"
---
Input:

(((1))))

Result:

:1:7

Expected the end of input, but instead found: `)`

  1│  (((1))))
   │         ↑

Error {
    kind: InvalidEndOfInput,
    token: Token {
        kind: RightParen,
        indent: 0,
        start: 7,
        end: 8,
        line: 1,
        column: 7,
    },
}
