src/snapshots/alma__parser__tests__test_expression__pattern_matching_if_condition.snap
---
source: src/parser.rs
assertion_line: 2981
expression: "parse(\"\\\nwhen 5 is\n    x if x > 3 -> 5\n\")"
---
Input:

when 5 is
    x if x > 3 -> 5


Result:

PatternMatching 0:29
    condition:
        Float 5 5:6
    PatternMatchingBranch 14:29
        pattern:
            Identifier x 14:15 14:15
        condition:
            Binary 19:24 GreaterThan
                lhs:
                    Identifier x 19:20 19:20
                rhs:
                    Float 3 23:24
        body:
            Float 5 28:29
